--- a/package.json
+++ b/package.json
@@ -42,10 +42,18 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "eslint-config-prettier": "^7.2.0",
     "prettier": "2.2.1"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit":"lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   }
+}
 }
